<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />

                <TextView
                    android:id="@+id/textHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_register_user"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="40dp"
                android:paddingRight="10dp">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/message_register_activity"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_first_name"
                    android:inputType="textPersonName"
                    android:textColorHighlight="@color/colorGrey" />

                <EditText
                    android:id="@+id/editLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_last_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_email"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_confirm_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_contact_number"
                    android:inputType="phone" />

                <LinearLayout
                    android:id="@+id/layoutAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/user_address"
                        android:inputType="textPersonName" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editState"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/user_state"
                            android:inputType="textPersonName" />

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <EditText
                            android:id="@+id/editCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/user_country"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/editZipcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/user_zipcode"
                        android:inputType="number" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <LinearLayout
                    android:id="@+id/layoutButtons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/buttonBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/button_back"
                        android:textColor="@color/colorPrimary" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/buttonRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/button_register"
                        android:textColor="@color/colorPrimary" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>